<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.farhan</groupId>
	<artifactId>mbt-transformer</artifactId>
	<version>1.10-SNAPSHOT</version>
	<name>MBT Transformer</name>
	<description>Transforms test cases to models and vice-versa</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>21</java.version>
		<cucumberxtexteditor.version>1.14.0-SNAPSHOT</cucumberxtexteditor.version>
	</properties>

	<scm>
		<connection>scm:git:https://github.com/farhan5248/claims-adjudication-ai</connection>
		<tag>HEAD</tag>
	</scm>

	<repositories>
		<repository>
			<id>github</id>
			<url>https://maven.pkg.github.com/farhan5248/claims-adjudication-ai</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>

	<distributionManagement>
		<repository>
			<id>github</id>
			<url>https://maven.pkg.github.com/farhan5248/claims-adjudication-ai</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</distributionManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<encoding>UTF-8</encoding>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.2.2</version>
				<configuration>
					<properties>
						<!-- Work around. Surefire does not include enough
                             information to disambiguate between different
                             examples and scenarios. -->
						<configurationParameters>
							cucumber.junit-platform.naming-strategy=long
						</configurationParameters>
					</properties>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<version>2.16.2</version>
			</plugin>
		</plugins>
	</build>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<version>3.2.2</version>
			</plugin>
		</plugins>
	</reporting>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.junit</groupId>
				<artifactId>junit-bom</artifactId>
				<version>5.10.1</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>io.cucumber</groupId>
				<artifactId>cucumber-bom</artifactId>
				<version>7.14.1</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<!-- Eclipse Common -->
		<dependency>
			<groupId>org.eclipse.core</groupId>
			<artifactId>runtime</artifactId>
			<version>3.29.0.v20230726-0617</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.emf</groupId>
			<artifactId>ecore</artifactId>
			<version>2.35.0.v20230829-0934</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.emf</groupId>
			<artifactId>ecore.xmi</artifactId>
			<version>2.35.0.v20230801-1141</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.emf</groupId>
			<artifactId>mapping.ecore2xml</artifactId>
			<version>2.12.0.v20230211-1150</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.emf</groupId>
			<artifactId>common</artifactId>
			<version>2.29.0.v20230916-0637</version>
		</dependency>
		<!-- Eclipse Xtext -->
		<dependency>
			<groupId>org.eclipse.equinox</groupId>
			<artifactId>common</artifactId>
			<version>3.18.100.v20230730-1117</version>
		</dependency>
		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>runtime</artifactId>
			<version>3.2.0.v20220404-1927</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.xtext</groupId>
			<artifactId>xtext</artifactId>
			<version>2.32.0.v20230827-1315</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.xtext</groupId>
			<artifactId>util</artifactId>
			<version>2.32.0.v20230827-1315</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.xtext</groupId>
			<artifactId>xbase.lib</artifactId>
			<version>2.33.0.v20231121-0955</version>
		</dependency>
		<dependency>
			<groupId>com.google.inject</groupId>
			<artifactId>guice</artifactId>
			<version>7.0.0</version>
		</dependency>
		<!-- Common -->
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>
		<!-- Eclipse UML -->
		<dependency>
			<groupId>org.eclipse.uml2</groupId>
			<artifactId>uml.profile.standard</artifactId>
			<version>1.5.0.v20221116-1811</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.uml2</groupId>
			<artifactId>common</artifactId>
			<version>2.5.0.v20221116-1811</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.uml2</groupId>
			<artifactId>types</artifactId>
			<version>2.5.0.v20221116-1811</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.uml2</groupId>
			<artifactId>uml.resources</artifactId>
			<version>5.5.0.v20221116-1811</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.uml2</groupId>
			<artifactId>uml</artifactId>
			<version>5.5.0.v20210228-1829</version>
		</dependency>
		<!-- GitHub Java -->
		<dependency>
			<groupId>com.github.javaparser</groupId>
			<artifactId>javaparser-core</artifactId>
			<version>3.25.7</version>
		</dependency>
		<!-- Cucumber -->
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-java</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-junit-platform-engine</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.platform</groupId>
			<artifactId>junit-platform-suite</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>
		<!-- Graph -->
		<dependency>
			<groupId>org.jgrapht</groupId>
			<artifactId>jgrapht-core</artifactId>
			<version>1.5.2</version>
		</dependency>
		<dependency>
			<groupId>org.jgrapht</groupId>
			<artifactId>jgrapht-io</artifactId>
			<version>1.4.0</version>
		</dependency>
		<dependency>
			<groupId>org.jgrapht</groupId>
			<artifactId>jgrapht-ext</artifactId>
			<version>1.5.2</version>
		</dependency>
		<dependency>
			<groupId>com.github.vlsi.mxgraph</groupId>
			<artifactId>jgraphx</artifactId>
			<version>4.2.2</version>
		</dependency>
		<!-- Utilities -->
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.15.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.14.0</version>
		</dependency>
		<!-- AsciiDoctor -->
		<dependency>
			<groupId>org.asciidoctor</groupId>
			<artifactId>asciidoctorj</artifactId>
			<version>2.5.11</version>
		</dependency>
		<!-- Farhan Cucumber -->
		<dependency>
			<groupId>org.farhan</groupId>
			<artifactId>cucumberxtexteditor</artifactId>
			<version>${cucumberxtexteditor.version}</version>
		</dependency>
	</dependencies>
</project>